--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.databarconditionalformatdata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.databarconditionalformatdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatData:interface'
-    summary: <span data-ttu-id="5b8c1-101">描述通过调用返回的数据的接口`dataBarConditionalFormat.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="5b8c1-101">An interface describing the data returned by calling `dataBarConditionalFormat.toJSON()`</span></span><!-- --><span data-ttu-id="5b8c1-102">.</span><span class="sxs-lookup"><span data-stu-id="5b8c1-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`dataBarConditionalFormat.toJSON()`<!-- -->.
     name: Excel.Interfaces.DataBarConditionalFormatData
     fullName: Excel.Interfaces.DataBarConditionalFormatData
     langs:
@@ -19,9 +19,9 @@ items:
       - 'excel!Excel.Interfaces.DataBarConditionalFormatData#upperBoundRule:member'
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatData#axisColor:member'
     summary: |-
-      <span data-ttu-id="5b8c1-103">代表\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的轴线的颜色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="5b8c1-103">HTML color code representing the color of the Axis line, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span> <span data-ttu-id="5b8c1-104">"" （空字符串）如果不存在或未设置轴。</span><span class="sxs-lookup"><span data-stu-id="5b8c1-104">"" (empty string) if no axis is present or set.</span></span>
+      代表\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的轴线的颜色的 HTML 颜色代码。 "" （空字符串）如果不存在或未设置轴。
 
-      <span data-ttu-id="5b8c1-105">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5b8c1-105">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: axisColor
     fullName: axisColor
     langs:
@@ -34,9 +34,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatData#axisFormat:member'
     summary: |-
-      <span data-ttu-id="5b8c1-106">为 Excel 数据栏确定轴的方式的表示形式。</span><span class="sxs-lookup"><span data-stu-id="5b8c1-106">Representation of how the axis is determined for an Excel data bar.</span></span>
+      为 Excel 数据栏确定轴的方式的表示形式。
 
-      <span data-ttu-id="5b8c1-107">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5b8c1-107">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: axisFormat
     fullName: axisFormat
     langs:
@@ -49,9 +49,9 @@ items:
           - 'excel!Excel.Interfaces.DataBarConditionalFormatData#axisFormat~0:complex'
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatData#barDirection:member'
     summary: |-
-      <span data-ttu-id="5b8c1-108">表示数据条图形应基于的方向。</span><span class="sxs-lookup"><span data-stu-id="5b8c1-108">Represents the direction that the data bar graphic should be based on.</span></span>
+      指定数据条图形的基于方向。
 
-      <span data-ttu-id="5b8c1-109">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5b8c1-109">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: barDirection
     fullName: barDirection
     langs:
@@ -64,9 +64,9 @@ items:
           - 'excel!Excel.Interfaces.DataBarConditionalFormatData#barDirection~0:complex'
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatData#lowerBoundRule:member'
     summary: |-
-      <span data-ttu-id="5b8c1-110">构成数据栏的下限（以及如何计算，如果适用）的规则。</span><span class="sxs-lookup"><span data-stu-id="5b8c1-110">The rule for what consistutes the lower bound (and how to calculate it, if applicable) for a data bar.</span></span> <span data-ttu-id="5b8c1-111">必须`ConditionalDataBarRule`将该对象设置为 JSON 对象（使用`x.lowerBoundRule = {...}` ，而不是`x.lowerBoundRule.formula = ...`</span><span class="sxs-lookup"><span data-stu-id="5b8c1-111">The `ConditionalDataBarRule` object must be set as a JSON object (use `x.lowerBoundRule = {...}` instead of `x.lowerBoundRule.formula = ...`</span></span><!-- --><span data-ttu-id="5b8c1-112">).</span><span class="sxs-lookup"><span data-stu-id="5b8c1-112"></span></span>
+      构成数据栏的下限（以及如何计算，如果适用）的规则。 必须`ConditionalDataBarRule`将该对象设置为 JSON 对象（使用`x.lowerBoundRule = {...}` ，而不是`x.lowerBoundRule.formula = ...`<!-- -->).
 
-      <span data-ttu-id="5b8c1-113">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5b8c1-113">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: lowerBoundRule
     fullName: lowerBoundRule
     langs:
@@ -79,9 +79,9 @@ items:
           - 'excel!Excel.ConditionalDataBarRule:interface'
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatData#negativeFormat:member'
     summary: |-
-      <span data-ttu-id="5b8c1-114">在 Excel 数据栏中的轴左侧的所有值的表示形式。</span><span class="sxs-lookup"><span data-stu-id="5b8c1-114">Representation of all values to the left of the axis in an Excel data bar.</span></span> <span data-ttu-id="5b8c1-115">只读。</span><span class="sxs-lookup"><span data-stu-id="5b8c1-115">Read-only.</span></span>
+      在 Excel 数据栏中的轴左侧的所有值的表示形式。
 
-      <span data-ttu-id="5b8c1-116">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5b8c1-116">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: negativeFormat
     fullName: negativeFormat
     langs:
@@ -94,9 +94,9 @@ items:
           - 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatData:interface'
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatData#positiveFormat:member'
     summary: |-
-      <span data-ttu-id="5b8c1-117">在 Excel 数据栏中的轴右侧的所有值的表示形式。</span><span class="sxs-lookup"><span data-stu-id="5b8c1-117">Representation of all values to the right of the axis in an Excel data bar.</span></span> <span data-ttu-id="5b8c1-118">只读。</span><span class="sxs-lookup"><span data-stu-id="5b8c1-118">Read-only.</span></span>
+      在 Excel 数据栏中的轴右侧的所有值的表示形式。
 
-      <span data-ttu-id="5b8c1-119">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5b8c1-119">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: positiveFormat
     fullName: positiveFormat
     langs:
@@ -109,9 +109,9 @@ items:
           - 'excel!Excel.Interfaces.ConditionalDataBarPositiveFormatData:interface'
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatData#showDataBarOnly:member'
     summary: |-
-      <span data-ttu-id="5b8c1-120">如果为 true，则对应用数据栏的单元格隐藏值。</span><span class="sxs-lookup"><span data-stu-id="5b8c1-120">If true, hides the values from the cells where the data bar is applied.</span></span>
+      如果为 true，则对应用数据栏的单元格隐藏值。
 
-      <span data-ttu-id="5b8c1-121">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5b8c1-121">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showDataBarOnly
     fullName: showDataBarOnly
     langs:
@@ -124,9 +124,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatData#upperBoundRule:member'
     summary: |-
-      <span data-ttu-id="5b8c1-122">构成数据栏的上限（以及如何计算，如果适用）的规则。</span><span class="sxs-lookup"><span data-stu-id="5b8c1-122">The rule for what constitutes the upper bound (and how to calculate it, if applicable) for a data bar.</span></span> <span data-ttu-id="5b8c1-123">必须`ConditionalDataBarRule`将该对象设置为 JSON 对象（使用`x.upperBoundRule = {...}` ，而不是`x.upperBoundRule.formula = ...`</span><span class="sxs-lookup"><span data-stu-id="5b8c1-123">The `ConditionalDataBarRule` object must be set as a JSON object (use `x.upperBoundRule = {...}` instead of `x.upperBoundRule.formula = ...`</span></span><!-- --><span data-ttu-id="5b8c1-124">).</span><span class="sxs-lookup"><span data-stu-id="5b8c1-124"></span></span>
+      构成数据栏的上限（以及如何计算，如果适用）的规则。 必须`ConditionalDataBarRule`将该对象设置为 JSON 对象（使用`x.upperBoundRule = {...}` ，而不是`x.upperBoundRule.formula = ...`<!-- -->).
 
-      <span data-ttu-id="5b8c1-125">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5b8c1-125">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: upperBoundRule
     fullName: upperBoundRule
     langs:
