--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.conditionaldatabarnegativeformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.conditionaldatabarnegativeformatupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData:interface'
-    summary: '<span data-ttu-id="aca89-101">一个用于更新 ConditionalDataBarNegativeFormat 对象上的数据的接口，可用于`conditionalDataBarNegativeFormat.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="aca89-101">An interface for updating data on the ConditionalDataBarNegativeFormat object, for use in `conditionalDataBarNegativeFormat.set({ ... })`</span></span><!-- --><span data-ttu-id="aca89-102">.</span><span class="sxs-lookup"><span data-stu-id="aca89-102"></span></span>'
+    summary: '一个用于更新 ConditionalDataBarNegativeFormat 对象上的数据的接口，可用于`conditionalDataBarNegativeFormat.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData
     fullName: Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData
     langs:
@@ -15,9 +15,9 @@ items:
       - 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData#matchPositiveFillColor:member'
   - uid: 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData#borderColor:member'
     summary: |-
-      <span data-ttu-id="aca89-103">代表\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线条颜色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="aca89-103">HTML color code representing the color of the border line, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span> <span data-ttu-id="aca89-104">如果不存在或设置了边框，则为 "空字符串"。</span><span class="sxs-lookup"><span data-stu-id="aca89-104">"Empty String" if no border is present or set.</span></span>
+      代表\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线颜色的 HTML 颜色代码。 如果不存在或设置了边框，则为 "空字符串"。
 
-      <span data-ttu-id="aca89-105">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aca89-105">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: borderColor
     fullName: borderColor
     langs:
@@ -30,9 +30,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData#fillColor:member'
     summary: |-
-      <span data-ttu-id="aca89-106">代表\#RRGGBB 的填充颜色的 HTML 颜色代码（例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）。</span><span class="sxs-lookup"><span data-stu-id="aca89-106">HTML color code representing the fill color, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span>
+      代表表单\#RRGGBB 的填充颜色的 HTML 颜色代码（例如，"FFA500"）或命名的 HTML 颜色（例如，"橙色"）。
 
-      <span data-ttu-id="aca89-107">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aca89-107">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fillColor
     fullName: fillColor
     langs:
@@ -45,9 +45,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData#matchPositiveBorderColor:member'
     summary: |-
-      <span data-ttu-id="aca89-108">该布尔值表示负 DataBar 是否与正 DataBar 具有相同边框颜色。</span><span class="sxs-lookup"><span data-stu-id="aca89-108">Boolean representation of whether or not the negative DataBar has the same border color as the positive DataBar.</span></span>
+      指定负 DataBar 的边框颜色是否与正 DataBar 相同。
 
-      <span data-ttu-id="aca89-109">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aca89-109">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: matchPositiveBorderColor
     fullName: matchPositiveBorderColor
     langs:
@@ -60,9 +60,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData#matchPositiveFillColor:member'
     summary: |-
-      <span data-ttu-id="aca89-110">该布尔值表示负 DataBar 是否与正 DataBar 具有相同填充颜色。</span><span class="sxs-lookup"><span data-stu-id="aca89-110">Boolean representation of whether or not the negative DataBar has the same fill color as the positive DataBar.</span></span>
+      指定负 DataBar 的填充颜色是否与正 DataBar 相同。
 
-      <span data-ttu-id="aca89-111">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aca89-111">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: matchPositiveFillColor
     fullName: matchPositiveFillColor
     langs:
