--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartaxistitleformatdata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartaxistitleformatdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleFormatData:interface'
-    summary: <span data-ttu-id="34bf6-101">描述通过调用返回的数据的接口`chartAxisTitleFormat.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="34bf6-101">An interface describing the data returned by calling `chartAxisTitleFormat.toJSON()`</span></span><!-- --><span data-ttu-id="34bf6-102">.</span><span class="sxs-lookup"><span data-stu-id="34bf6-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`chartAxisTitleFormat.toJSON()`<!-- -->.
     name: Excel.Interfaces.ChartAxisTitleFormatData
     fullName: Excel.Interfaces.ChartAxisTitleFormatData
     langs:
@@ -13,9 +13,9 @@ items:
       - 'excel!Excel.Interfaces.ChartAxisTitleFormatData#font:member'
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleFormatData#border:member'
     summary: |-
-      <span data-ttu-id="34bf6-103">表示边框格式，包括颜色、线条样式和粗细。</span><span class="sxs-lookup"><span data-stu-id="34bf6-103">Represents the border format, which includes color, linestyle, and weight.</span></span>
+      指定图表坐标轴标题的边框格式，包括颜色、linestyle 和粗细。
 
-      <span data-ttu-id="34bf6-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="34bf6-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: border
     fullName: border
     langs:
@@ -28,9 +28,9 @@ items:
           - 'excel!Excel.Interfaces.ChartBorderData:interface'
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleFormatData#font:member'
     summary: |-
-      <span data-ttu-id="34bf6-105">表示图表坐标轴标题对象的字体属性，例如字体名称、字体大小、颜色等。</span><span class="sxs-lookup"><span data-stu-id="34bf6-105">Represents the font attributes, such as font name, font size, color, etc. of chart axis title object.</span></span> <span data-ttu-id="34bf6-106">只读。</span><span class="sxs-lookup"><span data-stu-id="34bf6-106">Read-only.</span></span>
+      指定图表轴标题的字体属性，例如字体名称、字体大小、颜色等图表轴标题对象的字体。
 
-      <span data-ttu-id="34bf6-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="34bf6-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
