--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.pivottablecollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.pivottablecollectionloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.PivotTableCollectionLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="a3b64-101">表示属于工作簿或工作表的所有 PivotTable 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="a3b64-101">Represents a collection of all the PivotTables that are part of the workbook or worksheet.</span></span>
+      表示属于工作簿或工作表的所有 PivotTable 对象的集合。
 
-      <span data-ttu-id="a3b64-102">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a3b64-102">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.PivotTableCollectionLoadOptions
     fullName: Excel.Interfaces.PivotTableCollectionLoadOptions
     langs:
@@ -20,7 +20,7 @@ items:
       - 'excel!Excel.Interfaces.PivotTableCollectionLoadOptions#useCustomSortLists:member'
       - 'excel!Excel.Interfaces.PivotTableCollectionLoadOptions#worksheet:member'
   - uid: 'excel!Excel.Interfaces.PivotTableCollectionLoadOptions#$all:member'
-    summary: '<span data-ttu-id="a3b64-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="a3b64-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="a3b64-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="a3b64-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="a3b64-105">).</span><span class="sxs-lookup"><span data-stu-id="a3b64-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -33,9 +33,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotTableCollectionLoadOptions#enableDataValueEditing:member'
     summary: |-
-      <span data-ttu-id="a3b64-106">对于集合中的每一项：指定数据透视表是否允许用户对数据正文中的值进行编辑。</span><span class="sxs-lookup"><span data-stu-id="a3b64-106">For EACH ITEM in the collection: Specifies whether the PivotTable allows values in the data body to be edited by the user.</span></span>
+      对于集合中的每一项：指定数据透视表是否允许用户编辑数据正文中的值。
 
-      <span data-ttu-id="a3b64-107">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a3b64-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: enableDataValueEditing
     fullName: enableDataValueEditing
     langs:
@@ -48,9 +48,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotTableCollectionLoadOptions#id:member'
     summary: |-
-      <span data-ttu-id="a3b64-108">对于集合中的每一项：数据透视表的 Id。</span><span class="sxs-lookup"><span data-stu-id="a3b64-108">For EACH ITEM in the collection: Id of the PivotTable.</span></span> <span data-ttu-id="a3b64-109">只读。</span><span class="sxs-lookup"><span data-stu-id="a3b64-109">Read-only.</span></span>
+      对于集合中的每一项：数据透视表的 Id。
 
-      <span data-ttu-id="a3b64-110">\[[API 集： ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a3b64-110">\[ [API set: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -63,9 +63,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotTableCollectionLoadOptions#layout:member'
     summary: |-
-      <span data-ttu-id="a3b64-111">对于集合中的每一项：描述数据透视表的布局和可视结构的 PivotLayout。</span><span class="sxs-lookup"><span data-stu-id="a3b64-111">For EACH ITEM in the collection: The PivotLayout describing the layout and visual structure of the PivotTable.</span></span>
+      对于集合中的每一项：描述数据透视表的布局和可视结构的 PivotLayout。
 
-      <span data-ttu-id="a3b64-112">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a3b64-112">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: layout
     fullName: layout
     langs:
@@ -78,9 +78,9 @@ items:
           - 'excel!Excel.Interfaces.PivotLayoutLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.PivotTableCollectionLoadOptions#name:member'
     summary: |-
-      <span data-ttu-id="a3b64-113">对于集合中的每一项：数据透视表的名称。</span><span class="sxs-lookup"><span data-stu-id="a3b64-113">For EACH ITEM in the collection: Name of the PivotTable.</span></span>
+      对于集合中的每一项：数据透视表的名称。
 
-      <span data-ttu-id="a3b64-114">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a3b64-114">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -93,9 +93,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotTableCollectionLoadOptions#useCustomSortLists:member'
     summary: |-
-      <span data-ttu-id="a3b64-115">对于集合中的每一项：指定数据透视表在排序时是否使用自定义列表。</span><span class="sxs-lookup"><span data-stu-id="a3b64-115">For EACH ITEM in the collection: Specifies whether the PivotTable uses custom lists when sorting.</span></span>
+      对于集合中的每一项：指定在排序时数据透视表是否使用自定义列表。
 
-      <span data-ttu-id="a3b64-116">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a3b64-116">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: useCustomSortLists
     fullName: useCustomSortLists
     langs:
@@ -108,9 +108,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotTableCollectionLoadOptions#worksheet:member'
     summary: |-
-      <span data-ttu-id="a3b64-117">对于集合中的每一项：包含当前数据透视表的工作表。</span><span class="sxs-lookup"><span data-stu-id="a3b64-117">For EACH ITEM in the collection: The worksheet containing the current PivotTable.</span></span>
+      对于集合中的每一项：包含当前数据透视表的工作表。
 
-      <span data-ttu-id="a3b64-118">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a3b64-118">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: worksheet
     fullName: worksheet
     langs:
