--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.nameditemarrayvalues.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.nameditemarrayvalues.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.NamedItemArrayValues:class'
     summary: |-
-      <span data-ttu-id="6881f-101">表示一个包含已命名项目的值和类型的对象。</span><span class="sxs-lookup"><span data-stu-id="6881f-101">Represents an object containing values and types of a named item.</span></span>
+      表示一个包含已命名项目的值和类型的对象。
 
-      <span data-ttu-id="6881f-102">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6881f-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.NamedItemArrayValues
     fullName: Excel.NamedItemArrayValues
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.NamedItemArrayValues#context:member'
@@ -22,7 +22,7 @@ items:
       - 'excel!Excel.NamedItemArrayValues#types:member'
       - 'excel!Excel.NamedItemArrayValues#values:member'
   - uid: 'excel!Excel.NamedItemArrayValues#context:member'
-    summary: <span data-ttu-id="6881f-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="6881f-103">The request context associated with the object.</span></span> <span data-ttu-id="6881f-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="6881f-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -34,7 +34,7 @@ items:
         type:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.NamedItemArrayValues#load:member(1)'
-    summary: <span data-ttu-id="6881f-105">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="6881f-105">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="6881f-106">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="6881f-106">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -48,11 +48,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="6881f-107">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="6881f-107">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.Interfaces.NamedItemArrayValuesLoadOptions:interface'
   - uid: 'excel!Excel.NamedItemArrayValues#load:member(2)'
-    summary: <span data-ttu-id="6881f-108">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="6881f-108">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="6881f-109">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="6881f-109">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -66,11 +66,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="6881f-110">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="6881f-110">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.NamedItemArrayValues#load:member(3)'
-    summary: <span data-ttu-id="6881f-111">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="6881f-111">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="6881f-112">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="6881f-112">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -88,7 +88,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="6881f-113">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="6881f-113">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -96,7 +96,7 @@ items:
                           expand?: string;
                       }
   - uid: 'excel!Excel.NamedItemArrayValues#toJSON:member(1)'
-    summary: '<span data-ttu-id="6881f-114">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="6881f-114">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="6881f-115">.</span><span class="sxs-lookup"><span data-stu-id="6881f-115"></span></span> <span data-ttu-id="6881f-116">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="6881f-116"></span></span><!-- --><span data-ttu-id="6881f-117">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 NamedItemArrayValues 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.NamedItemArrayValuesData`</span><span class="sxs-lookup"><span data-stu-id="6881f-117">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.NamedItemArrayValues object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.NamedItemArrayValuesData`</span></span><!-- --><span data-ttu-id="6881f-118">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="6881f-118">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 NamedItemArrayValues 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.NamedItemArrayValuesData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -110,9 +110,9 @@ items:
         description: ''
   - uid: 'excel!Excel.NamedItemArrayValues#types:member'
     summary: |-
-      <span data-ttu-id="6881f-119">表示已命名项目数组中每个项目的类型</span><span class="sxs-lookup"><span data-stu-id="6881f-119">Represents the types for each item in the named item array</span></span>
+      表示已命名项目数组中每个项目的类型
 
-      <span data-ttu-id="6881f-120">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6881f-120">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: types
     fullName: types
     langs:
@@ -125,9 +125,9 @@ items:
           - 'excel!Excel.NamedItemArrayValues#types~0:complex'
   - uid: 'excel!Excel.NamedItemArrayValues#values:member'
     summary: |-
-      <span data-ttu-id="6881f-121">表示已命名项目数组中每个项目的值。</span><span class="sxs-lookup"><span data-stu-id="6881f-121">Represents the values of each item in the named item array.</span></span>
+      表示已命名项目数组中每个项目的值。
 
-      <span data-ttu-id="6881f-122">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6881f-122">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: values
     fullName: values
     langs:
@@ -139,7 +139,7 @@ items:
         type:
           - 'any[][]'
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
